kvirc's previous behaviour. For a more detailed (and up to date) log, point your browser at:
  https://svn.kvirc.de/kvirc/timeline

August 2010
   [HelLViS69]
   - Added DBus notification system
   - Tweaked Update Applet to allow checking of SVN revisions
   - Tweaked last read marker icon to allow scrolling back when clicked
   [CtrlAltCa]
   - Added SSL backend to DCC
   - Added $dcc.getSSLCertInfo() and $certificate() functions

Jun 2010
   [Pragma]
   - Fixes for some bugs reported on trac
   - Minor cleanups

May 2010
   [HelLViS69]
   - Rewrote the shortcut system

April 2010
   [CtrlAltCa]
   - added text to dcc video
   - moved the "smart nick colors" functions to their own file and added the ability to expose
     your current personalized nick colors to others

March 2010
   [Pragma]
   - Make the default script translatable again. This time in its own set of po
   [Noldor]
   - Improved the logview module
   [Noldor and HelLViS69]
   - Improvements in theme manager
   [CtrlAltCa]
   - Ported the old scripts to kvirc4's kvs
   - added $uflags()

February 2010
   [CtrlAltCa]
   - Avoid the use of X11 api to get an ARGB visual; use Qt::WA_TranslucentBackground instead
   - Better support for freenode's ircd-seven:
     introduce a delayed queue for requests, to avoid excess floods
     full support for +q (quiet ban) mode
   - added support for CAP (extended capabilities)
   - added support for SASL (plain and dh-blowfish methods)
   - Readded the theme choice on first setup
   [Noldor]
   - Rewrote the aliaseditor module
   - kvirc theme manager script
   - Created classeditor module
   [HelLViS69]
   - Readded the ability to customize CTCP version reply

January 2010
   [CtrlAltCa]
   - Added realtime filtering for channels list (request #60)
   - Kde4 emoticon theme
   [Noldor]
   - Fixed installing script while aliaseditor is open 
   - Ported Newsticker script
   - KVS improvements/cleaning
   - Ported Objectsdumptree script